2026-02: Monthly update (models, security, data).